# genops-framework

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REPLICATION.md  THREATS_TO_VALIDITY.md  docker-compose.yml  pyproject.toml  run_demo.py
.serena/: project.yml
data/: README.md  sample_deployments.json  sample_services.json
docs/research/: REPRODUCIBILITY.md
genops/: __init__.py  benchmarks.py  canary_rollout.py  context_ingestion.py  diagrams.py  experiments.py  governance.py  models.py  persistence.py  pipeline.py  risk_scoring.py  simulator.py  statistical_analysis.py
reports/: REPORTS.md  demo_output.txt
tests/: __init__.py  test_integration.py  test_models.py  test_pillars.py  test_study_results.py
